# inferential-strategies

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
reasoning_strategies/contexts/: context.py  marbles.yaml  zoo.yaml
reasoning_strategies/dataprep/: preprocessing.py
reasoning_strategies/models/: model_args.py  model_wrapper.py  reasoner.py
reasoning_strategies/models/model_config/: HuggingFaceH4_zephyr-7b-beta.yaml  meta-llama_Llama-2-13b-chat-hf.yaml  mistralai_Mistral-7B-Instruct-v0.2.yaml
reasoning_strategies/prompts/: prompt_manager.py
reasoning_strategies/prompts/reasoning_prompts/cot_sc/: cot_sc_prompt.txt  cot_sc_system_message.txt
reasoning_strategies/prompts/task_prompts/experiment1/: cautious_system_instruction.txt  prompt.txt  system_message.txt
reasoning_strategies/utils/: utils.py
