[tool.poetry]
name = "reasoning_strategies"
version = "0.1.0"
description = "\"This repository contains code related to the paper: \"'Comparing Inferential Strategies of Humans and Large Language Models in Deductive Reasoning'\""
authors = [
  "Philipp Mondorf <p.mondorf@lmu.de>",
  "Barbara Plank <b.plank@lmu.de>"
]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.36.2"
datasets = "^2.16.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
accelerate = "^0.25.0"
bitsandbytes = "^0.42.0"
sentencepiece = "^0.1.99"
protobuf = "^4.25.2"
packaging = "^23.2"
peft = "^0.7.1"
trl = "^0.7.10"
tensorboardx = "^2.6.2.2"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0" 
flake8 = "^6.0.0"
mypy = "^1.3.0"
types-PyYAML = "^6.0.12"
pre-commit = "^3.3.3"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[tool.mypy]
exclude = [
    "tests",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
